--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: kuozo/cam
+          repository: kuozo/cam/cam
           tag_with_ref: true
