--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,14 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@master
+
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: klnchu/cam
+          tag_with_ref: true
       
       - name: build docker
         uses: docker/build-push-action@v1
